# kinect_2_server

./: App.xaml.cs  GestureRecognition.cs  Kinect2Server.csproj  Kinect2Server.sln  KinectAudioStream.cs  KinectJointFilter.cs  MainWindow.xaml  MainWindow.xaml.cs  NetworkPublisher.cs  README.md  SkeletonTracking.cs  SpeechBasics-WPF.csproj  SpeechGrammar-en-US.xml  SpeechGrammar-fr-FR.xml  SpeechRecognition.cs  SpeechRecognitionView.cs  app.config
Model/: AudioFrame.cs  ColorImages.cs  DepthImage.cs  NetworkPublisher.cs  NetworkSubscriber.cs  SkeletonTracking.cs  SpeechRecognition.cs  TextToSpeech.cs
Properties/: Resources.Designer.cs  Resources.resx
View/: GestureRecognitionView.xaml  GestureRecognitionView.xaml.cs  SkeletonTrackingView.xaml  SkeletonTrackingView.xaml.cs  SpeechRecognitionView.xaml  SpeechRecognitionView.xaml.cs  TextToSpeechView.xaml  TextToSpeechView.xaml.cs
clients/: changing_params.py  main.py
clients/notebooks/: module.ipynb  receive.ipynb
clients/python/: setup.py
clients/ros/: README.md
clients/ros/kinect_2_client/: CMakeLists.txt  package.xml
clients/ros/kinect_2_client/scripts/: kinect_republisher.py
server/: App.xaml  Kinect2Server.csproj  Kinect2Server.sln  MainWindow.xaml  MainWindow.xaml.cs  packages.config
server/Model/: AudioFrame.cs  ColorImage.cs  DepthImage.cs  KinectJointFilter.cs  MultiSourceImage.cs  NetworkPublisher.cs  NetworkResponder.cs  NetworkSubscriber.cs  ParametersUpdater.cs  SkeletonFaceTracking.cs  SkeletonTracking.cs  SpeechRecognition.cs  TextToSpeech.cs
server/Properties/: AssemblyInfo.cs  (+3 more)
(+22 files in other folders)
